Closed Bug 521190 Opened 15 years ago Closed 15 years ago

TM: "Assertion failure: x->oprnd2() == lirbuf->sp || x->oprnd2() == lirbuf->state" on ARM

Categories

(Core :: JavaScript Engine, defect)

ARM
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta5-fixed

People

(Reporter: jruderman, Assigned: dvander)

Details

(Keywords: assertion, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 2 obsolete files)

On ARM, using TM rev 43ee7e151862+, this messy testcase triggers:

Assertion failure: x->oprnd2() == lirbuf->sp || x->oprnd2() == lirbuf->state, at ../jstracer.cpp:3697
OS: Mac OS X → Linux
Hardware: x86 → ARM
Attached patch fixes bug (obsolete) — Splinter Review
This is a real bug, the tracker could be emitting garbage stores when large displacements are involved.
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #407675 - Flags: review?(gal)
Flags: blocking1.9.2? → blocking1.9.2+
Attached patch better fix (obsolete) — Splinter Review
addresses IRL comments - keep using the tracker and just pick the oddball LIR apart.
Attachment #407675 - Attachment is obsolete: true
Attachment #407681 - Flags: review?(gal)
Attachment #407675 - Flags: review?(gal)
Attached patch whitespace fixesSplinter Review
Attachment #407681 - Attachment is obsolete: true
Attachment #407681 - Flags: review?(gal)
Comment on attachment 407682 [details] [diff] [review]
whitespace fixes

Indentation is all messed up. Otherwise great.
Attachment #407682 - Flags: review?(gal) → review+
http://hg.mozilla.org/tracemonkey/rev/b09c112b9b31

Sorry about that, the ARM box wasn't obeying vim modelines.
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/b09c112b9b31
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
These bugs landed after b4 was cut. Moving flag out.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: