Fixed large displacements messing up the tracker on ARM (bug 521190, r=gal).